--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,5 +1,5 @@
-[unix_http_server]
-file=/dev/shm/supervisor.sock   ; (the path to the socket file)
+;[unix_http_server]
+;file=/dev/shm/supervisor.sock   ; (the path to the socket file)
  
 [supervisord]
 logfile=/var/log/supervisord.log ; (main log file;default $CWD/supervisord.log)
@@ -15,11 +15,11 @@ minprocs=200                 ; (min. avail process descriptors;default 200)
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
 ; added by defining them in separate rpcinterface: sections
-[rpcinterface:supervisor]
-supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+;[rpcinterface:supervisor]
+;supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
  
-[supervisorctl]
-serverurl=unix:///dev/shm/supervisor.sock ; use a unix:// URL  for a unix socket
+;[supervisorctl]
+;serverurl=unix:///dev/shm/supervisor.sock ; use a unix:// URL  for a unix socket
  
 ; The [include] section can just contain the "files" setting.  This
 ; setting can list multiple files (separated by whitespace or
@@ -27,8 +27,8 @@ serverurl=unix:///dev/shm/supervisor.sock ; use a unix:// URL  for a unix socket
 ; interpreted as relative to this file.  Included files *cannot*
 ; include files themselves.
  
-[include]
-files = /etc/supervisor/conf.d/*.conf
+;[include]
+;files = /etc/supervisor/conf.d/*.conf
  
 [program:monica-proxy-out]
 command=/run/monica/monica-zmq-proxy -p -f %(ENV_monica_intern_out_port)s -b %(ENV_monica_consumer_port)s 
