--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -326,7 +326,7 @@ ${CAPNP_SCHEMAS_DIR}/common.capnp
 ${CAPNP_SCHEMAS_DIR}/climate_data.capnp
 ${CAPNP_SCHEMAS_DIR}/model.capnp
 ${CAPNP_SCHEMAS_DIR}/geo_coord.capnp
-#${CAPNP_SCHEMAS_DIR}/date.capnp
+${CAPNP_SCHEMAS_DIR}/date.capnp
 ${CAPNP_SCHEMAS_DIR}/cluster_admin_service.capnp)
 message(STATUS "CAPNP_SRCS: " "${CAPNP_SRCS}")	
 
