--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,11 @@ if(MSVC)
 	endif()
 endif()
 
+# https://cmake.org/cmake/help/latest/prop_tgt/CXX_STANDARD.html
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 #set(CMAKE_CXX_STANDARD 14)
 
 # setup the target group variable, used to group targets into folders in IDEs
@@ -82,6 +87,34 @@ find_package(Threads REQUIRED)
 #define folder structure in vs solution corresponding to real folder structure
 GroupSources("src" ${PROJECT_SOURCE_DIR})
 GroupSources("util" "${PROJECT_SOURCE_DIR}/..")
+
+#------------------------------------------------------------------------------
+
+if (WITH_CAPNPROTO)
+
+set_absolute_path(MAS_INFRASTRUCTURE_DIR "../mas-infrastructure")
+set_absolute_path(CAPNP_SCHEMAS_DIR "${MAS_INFRASTRUCTURE_DIR}/capnproto_schemas")
+
+find_package(CapnProto CONFIG REQUIRED)
+
+set(CAPNPC_SRC_PREFIX ${CAPNP_SCHEMAS_DIR})
+capnp_generate_cpp(CAPNP_SRCS CAPNP_HDRS 
+${CAPNP_SCHEMAS_DIR}/common.capnp 
+${CAPNP_SCHEMAS_DIR}/climate_data.capnp
+${CAPNP_SCHEMAS_DIR}/soil_data.capnp
+${CAPNP_SCHEMAS_DIR}/model.capnp
+${CAPNP_SCHEMAS_DIR}/geo_coord.capnp
+${CAPNP_SCHEMAS_DIR}/date.capnp
+${CAPNP_SCHEMAS_DIR}/persistence.capnp
+${CAPNP_SCHEMAS_DIR}/registry.capnp
+${CAPNP_SCHEMAS_DIR}/cluster_admin_service.capnp
+${CAPNP_SCHEMAS_DIR}/monica/monica_params.capnp
+${CAPNP_SCHEMAS_DIR}/monica/monica_state.capnp
+)
+message(STATUS "CAPNP_HDRS: " ${CAPNP_HDRS})
+message(STATUS "CAPNP_SRCS: " ${CAPNP_SRCS})	
+
+endif()
 
 #------------------------------------------------------------------------------
 
@@ -129,8 +162,11 @@ add_library(monica_lib
 
 	src/resource/version.h
 	src/resource/version_resource.rc
+
+	${CAPNP_HDRS}
+	${CAPNP_SRCS}
 )
-target_include_directories(monica_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories(monica_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})
 if (MSVC)
 	target_compile_options(monica_lib PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
@@ -147,6 +183,7 @@ target_link_libraries(monica_lib
 	sqlite3_lib
 	climate_common_lib
 	climate_file_io_lib
+	CapnProto::capnp-rpc
 )
 
 #------------------------------------------------------------------------------
@@ -166,7 +203,7 @@ set(MONICA_RUN_SOURCE_FILES
 	src/run/env-json-from-json-config.cpp
 )
 add_library(monica_run_lib ${MONICA_RUN_SOURCE_FILES})
-target_include_directories(monica_run_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+#target_include_directories(monica_run_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 if (MSVC)
 	target_compile_options(monica_run_lib PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
@@ -193,6 +230,7 @@ target_link_libraries(monica-run
 	${CMAKE_THREAD_LIBS_INIT}
 	${CMAKE_DL_LIBS}
 	monica_run_lib
+	CapnProto::capnp-rpc
 )
 
 #------------------------------------------------------------------------------
@@ -243,6 +281,8 @@ set(MONICA_ZMQ_RUN_SOURCE
 	src/run/run-monica-zmq.h
 	src/run/run-monica-zmq.cpp
 	src/run/monica-zmq-run-main.cpp
+
+	${CAPNP_HDRS}
 )
 add_executable(monica-zmq-run ${MONICA_ZMQ_RUN_SOURCE})
 if (MSVC)
@@ -316,30 +356,40 @@ target_link_libraries(monica-zmq-server
 
 if (WITH_CAPNPROTO)
 
-set_absolute_path(CAPNP_SCHEMAS_DIR "../capnproto_schemas")
+#set_absolute_path(MAS_INFRASTRUCTURE_DIR "../mas-infrastructure")
+#set_absolute_path(CAPNP_SCHEMAS_DIR "${MAS_INFRASTRUCTURE_DIR}/capnproto_schemas")
 
-find_package(CapnProto CONFIG REQUIRED)
+#find_package(CapnProto CONFIG REQUIRED)
 
-set(CAPNPC_SRC_PREFIX ${CAPNP_SCHEMAS_DIR})
-capnp_generate_cpp(CAPNP_SRCS CAPNP_HDRS 
-${CAPNP_SCHEMAS_DIR}/common.capnp 
-${CAPNP_SCHEMAS_DIR}/climate_data.capnp
-${CAPNP_SCHEMAS_DIR}/soil_data.capnp
-${CAPNP_SCHEMAS_DIR}/model.capnp
-${CAPNP_SCHEMAS_DIR}/geo_coord.capnp
-${CAPNP_SCHEMAS_DIR}/date.capnp
-${CAPNP_SCHEMAS_DIR}/cluster_admin_service.capnp)
-message(STATUS "CAPNP_SRCS: " "${CAPNP_SRCS}")	
+#set(CAPNPC_SRC_PREFIX ${CAPNP_SCHEMAS_DIR})
+#capnp_generate_cpp(CAPNP_SRCS CAPNP_HDRS 
+#${CAPNP_SCHEMAS_DIR}/common.capnp 
+#${CAPNP_SCHEMAS_DIR}/climate_data.capnp
+#${CAPNP_SCHEMAS_DIR}/soil_data.capnp
+#${CAPNP_SCHEMAS_DIR}/model.capnp
+#${CAPNP_SCHEMAS_DIR}/geo_coord.capnp
+#${CAPNP_SCHEMAS_DIR}/date.capnp
+#${CAPNP_SCHEMAS_DIR}/persistence.capnp
+#${CAPNP_SCHEMAS_DIR}/registry.capnp
+#${CAPNP_SCHEMAS_DIR}/cluster_admin_service.capnp
+#${CAPNP_SCHEMAS_DIR}/monica/monica_params.capnp
+#${CAPNP_SCHEMAS_DIR}/monica/monica_state.capnp)
+#message(STATUS "CAPNP_SRCS: " "${CAPNP_SRCS}")	
 
 # create monica-capnp-server executable, the server running monica via CapNProto RPC
 set(MONICA_CAPNP_SERVER_SOURCE_FILES
 	src/run/monica-capnp-server-main.cpp
 	src/run/run-monica-capnp.h
 	src/run/run-monica-capnp.cpp
+	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/rpc-connections.h
+	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/rpc-connections.cpp
+	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/common.h
+	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/common.cpp
 )
 set(MONICA_CAPNP_SERVER_SOURCE 
 	${MONICA_CAPNP_SERVER_SOURCE_FILES}
-	${CAPNP_SRCS}
+	#${CAPNP_HDRS}
+	#${CAPNP_SRCS}
 )
 add_executable(monica-capnp-server ${MONICA_CAPNP_SERVER_SOURCE})
 target_link_libraries(monica-capnp-server
@@ -360,10 +410,15 @@ set(MONICA_CAPNP_PROXY_SOURCE_FILES
 	src/run/monica-capnp-proxy-main.cpp
 	src/run/run-monica-capnp.h
 	src/run/run-monica-capnp.cpp
+	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/rpc-connections.h
+	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/rpc-connections.cpp
+	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/common.h
+	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/common.cpp
 )
 set(MONICA_CAPNP_PROXY_SOURCE 
 	${MONICA_CAPNP_PROXY_SOURCE_FILES}
-	${CAPNP_SRCS}
+	#${CAPNP_HDRS}
+	#${CAPNP_SRCS}
 )
 add_executable(monica-capnp-proxy ${MONICA_CAPNP_PROXY_SOURCE})
 target_link_libraries(monica-capnp-proxy
