dev dump and refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,8 +135,8 @@ GroupSources("util" "${PROJECT_SOURCE_DIR}/..")
 add_library(monica_lib 
 	src/core/crop.h
 	src/core/crop.cpp
-	src/core/crop-growth.h
-	src/core/crop-growth.cpp
+	src/core/crop-module.h
+	src/core/crop-module.cpp
 	src/core/monica-model.h
 	src/core/monica-model.cpp
 	src/core/monica-parameters.h
@@ -149,6 +149,10 @@ add_library(monica_lib
 	src/core/soilcolumn.cpp
 	src/core/soilmoisture.h
 	src/core/soilmoisture.cpp
+	src/core/frost-component.h
+	src/core/frost-component.cpp
+	src/core/snow-component.h
+	src/core/snow-component.cpp
 	src/core/soilorganic.h
 	src/core/soilorganic.cpp
 	src/core/soiltemperature.h
