--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ cluster2-release/
 cluster3-release/
 CMakeFiles/
 
+
 # dot files
 .*
 
@@ -213,3 +214,6 @@ project-files/monica.VC.db
 /_cmake_win32
 /_cmake_win64
 _cmake_vs2019_win64
+/_cmake_linux
+/_cmake_linux_debug
+/_cmake_linux_zig
